--- a/app/src/main/resources/application.properties
+++ b/app/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.application.name=back-end
 spring.datasource.url=jdbc:mysql://localhost/cms?usessl=false
 spring.datasource.username=root
 
-spring.datasource.password=${DB_PASSWORD}
+spring.datasource.password=Lidrenus221!
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.defer-datasource-initialization=true
 
