--- a/app/src/main/resources/application.properties
+++ b/app/src/main/resources/application.properties
@@ -1,32 +1,26 @@
+# application.properties - pozostaw jak masz dla lokalnego developmentu
+
+# application-docker.properties - nowy plik
 spring.application.name=back-end
 
-spring.datasource.url=jdbc:mysql://localhost/cms?usessl=false
+spring.datasource.url=jdbc:mysql://mysql:3306/cms?usessl=false
 spring.datasource.username=root
-
 spring.datasource.password=Lidrenus221!
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.defer-datasource-initialization=true
 
-
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.open-in-view=false
-spring.data.mongodb.uri=mongodb://127.0.0.1:27017/prescriptions
+spring.data.mongodb.uri=mongodb://mongodb:27017/prescriptions
 
 management.endpoint.health.show-details=always
 management.health.db.enabled=true
 
-
 api.path=/
 jwt.secret=$!@#$^%$$$%####$DDCPN0234FCFDPD8670M
 
-
-
 spring.web.resources.static-locations=classpath:/static/
-
-# -------------------------
-# Thymeleaf Configuration
-# -------------------------
 spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
 spring.thymeleaf.mode=HTML
